add font montserrat

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,1 +1,5 @@
-@import '../layout/App.scss'
+@import '../utils/variables.scss';
+@import '../utils/global.scss';
+
+@import '../layout/App.scss';
+@import '../../components/Navbar.scss';
