--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -2,4 +2,4 @@
 @import '../utils/global.scss';
 
 @import '../layout/App.scss';
-@import '../../components/Navbar.scss';
+@import '../../components/Navbar/Navbar.scss';
