add style & variables

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,6 +1,7 @@
 @import '../utils/variables.scss';
 @import '../utils/global.scss';
 
-@import '../layout/App.scss';
+@import '../../pages/Home/Home.scss';
 @import '../../components/Navbar/Navbar.scss';
+@import '../../components/Header/Header.scss';
 @import '../../components/Footer/Footer.scss';
