--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,6 +8,7 @@ nav {
     justify-content: space-between;
     margin-top: 50px;
     margin-bottom: 50px;
+    color: $black;
     a {
         text-decoration: none;
         color: inherit;
