--- a/src/pages/AboutRental/AboutRental.scss
+++ b/src/pages/AboutRental/AboutRental.scss
@@ -27,6 +27,7 @@
     display: flex;
     width: 90%;
     margin: 0 auto;
+    margin-bottom: 20px;
     .property__bloc1 {
         display: flex;
         justify-content: left;
@@ -87,9 +88,34 @@
             }
         }
     }
+
     .property__bloc2 {
         width: 45%;
-        height: 50px;
-        background-color: blue;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        .property__review {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            width: 100%;
+            gap: 10px;
+            &--title{
+                text-align: left;
+                color: $main-color;
+                font-size: 16px;
+                font-weight: 400;
+            }
+            &--profil {
+                height: 50px;
+                width: 50px;
+                border-radius: 50%;
+                object-fit: fill;
+            }
+        }
+        .property__review--rating {
+            display: flex;
+            justify-content: flex-end;
+        }
     }
 }
