--- a/src/components/DropDown/DropDown.scss
+++ b/src/components/DropDown/DropDown.scss
@@ -3,8 +3,8 @@
     justify-content: space-between;
     align-items: center;
     background-color: $main-color;
-    height: 52px;
-    margin: 0 auto;
+    // height: 52px;
+    // margin: 0 auto;
     border-radius: 5px;
     &--title {
         color: $white;
