--- a/src/assets/utils/variables.scss
+++ b/src/assets/utils/variables.scss
@@ -3,3 +3,5 @@ $main-color-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10
 $second-color: #F6F6F6;
 $white: white;
 $black: black;
+
+$starColor : #E3E3E3;
