--- a/src/pages/AboutRental/AboutRental.scss
+++ b/src/pages/AboutRental/AboutRental.scss
@@ -63,6 +63,7 @@
                 display: flex;
                 gap: 10px;
                 margin-top: 15px;
+                margin-bottom: 15px;
                 .property__tag--tag {
                     display: flex;
                     justify-content: center;
@@ -102,6 +103,7 @@
         height: auto;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         .property__review {
             display: flex;
             justify-content: flex-end;
@@ -125,6 +127,14 @@
             display: flex;
             justify-content: flex-end;
             gap: 5px;
+
+            .star {
+                color: $main-color;
+            }
+
+            .star2 {
+                color: $starColor;
+            }
         }
     }
 }
