--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -6,6 +6,7 @@
 @import '../../components/Footer/Footer.scss';
 @import '../../components/Banner/Banner.scss';
 @import '../../components/DropDown/DropDown.scss';
+@import '../../components/Error/Error.scss';
 
 /* Pages*/
 @import '../../pages/Home/Home.scss';
