create Component Card

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -7,6 +7,7 @@
 @import '../../components/Banner/Banner.scss';
 @import '../../components/DropDown/DropDown.scss';
 @import '../../components/Error/Error.scss';
+@import '../../components/Card/Card.scss';
 
 /* Pages*/
 @import '../../pages/Home/Home.scss';
