--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,10 +1,13 @@
 .home__gallery {
-    background-color: red;
-    border-radius: 10px;
     height: 350px;
     width: 350px;
     position: relative;
-
+    &--image {
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+        border-radius: 10px;
+    }
     &--title {
         position: absolute;
         left: 10px;
