--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -3,7 +3,14 @@
     flex-direction: column;
     width: 90%;
     margin: 0 auto;
-    gap: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
+    gap: 20px;
+    &--text {
+        width: 69%;
+        margin: 0 auto;
+        background-color: $second-color;
+        padding: 20px 3%;
+        border-radius: 0 0 10px 10px;
+    }
 }
