--- a/src/pages/AboutRental/AboutRental.scss
+++ b/src/pages/AboutRental/AboutRental.scss
@@ -41,6 +41,7 @@
         justify-content: left;
         text-align: left;
         width: 55%;
+        
         .property__details {
             display: flex;
             flex-direction: column;
@@ -48,6 +49,7 @@
             margin: 0 auto;
             .property__header {
                 width: 100%;
+                height: 73px;
                 &--title {
                     margin-bottom: 5px;
                     color: $main-color;
@@ -62,8 +64,8 @@
             .property__tags {
                 display: flex;
                 gap: 10px;
-                margin-top: 15px;
-                margin-bottom: 15px;
+                margin-top: 30px;
+                margin-bottom: 30px;
                 .property__tag--tag {
                     display: flex;
                     justify-content: center;
@@ -108,12 +110,15 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        height: 215px;
         .property__review {
             display: flex;
             justify-content: flex-end;
             align-items: center;
             width: 100%;
             gap: 10px;
+            height: 73px;
+            margin-bottom: 0;
             &--title{
                 text-align: left;
                 color: $main-color;
@@ -131,6 +136,9 @@
             display: flex;
             justify-content: flex-end;
             gap: 5px;
+            height: 30px;
+            margin-top: 15px;
+            margin-bottom: 15px;
 
             .star {
                 color: $main-color;
