--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -12,6 +12,9 @@ nav {
     a {
         text-decoration: none;
         color: inherit;
+        &.active li {
+            border-bottom: 2px solid $black;
+        }
     }
     ul {
         display: flex;
