--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -5,10 +5,12 @@ header {
     height: 223px;
 
     .header__wrapper {
+        display: flex;
         position: relative;
         width: 90%;
         img {
             width: 100%;
+            height: 100%;
             height: 223px;
             object-fit: cover;
             filter: brightness(35%) contrast(100%);
@@ -17,10 +19,11 @@ header {
         h1 {
             display: flex;
             justify-content: center;
+            align-items: center;
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            height: 100%;
+            width: 100%;
+            margin: 0;
             color: $white;
             font-weight: 700;
         }
