--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,6 +2,23 @@
     height: 350px;
     width: 350px;
     position: relative;
+
+    &--image-container {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        border-radius: 10px;
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(transparent, #00000080);
+        }
+    }
     &--image {
         width: 100%;
         height: 100%;
