--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -14,7 +14,7 @@ header {
             height: 223px;
             object-fit: cover;
             filter: brightness(35%) contrast(100%);
-            border-radius: 25px;
+            border-radius: 15px;
         }
         h1 {
             display: flex;
@@ -26,6 +26,22 @@ header {
             margin: 0;
             color: $white;
             font-weight: 700;
+        }
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    header {
+        height: 110px;
+        .header__wrapper {
+            img {
+                height: 100%;
+            }
+            h1 {
+                font-size: 18px;
+                width: 175px;
+                margin-left: 20px;
+            }
         }
     }
 }
