--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -34,3 +34,16 @@
         font-weight: 600;
     }
 }
+@media only screen and (max-width: 425px) {
+    .home__gallery {
+        width: 100%;
+        height: 255px;
+        &--image-container {
+            height: 255px;
+        }
+        &--image {
+            width: 100%;
+            height: 255px;
+        }
+    }
+}
