--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -11,5 +11,10 @@
     border-radius: 20px;
     flex-wrap: wrap;
     gap: 50px;
-    
+}
+
+@media only screen and (max-width: 425px) {
+    .home {
+        background-color: $white;
+    }
 }
