--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -29,6 +29,7 @@ nav {
 
 @media only screen and (max-width: 500px) {
     nav {
+        margin-bottom: 20px;
         .nav__wrapper {
             a img {
                 height: 35px;
