--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -13,8 +13,11 @@
     gap: 50px;
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 500px) {
     .home {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        gap: 20px;
         background-color: $white;
     }
 }
