--- a/src/pages/AboutRental/AboutRental.scss
+++ b/src/pages/AboutRental/AboutRental.scss
@@ -29,6 +29,12 @@
             color: $white;
         }
     }
+    &--number {
+        position: absolute;
+        top: 90%;
+        left: 50%;
+        color: $white;
+    }
 }
 
 .property__wrapper {
