--- a/src/pages/AboutRental/AboutRental.scss
+++ b/src/pages/AboutRental/AboutRental.scss
@@ -170,11 +170,14 @@
     justify-content: space-between;
     margin: 0 auto;
     margin-bottom: 40px;
-    &--description {
+
+    &--description, &--equipment {
         width: 47%;
     }
-    &--equipment {
-        width: 47%;
+    .property__dropdown--content {
+        background-color: $second-color;
+        padding: 20px 3%;
+        border-radius: 0 0 10px 10px;
     }
 }
 
@@ -235,6 +238,14 @@
                 height: 14px!important;
                 width: 14px!important;
             }
+        }
+    }
+    .collaspe__wrapper {
+        flex-direction: column;
+        gap: 30px;
+
+        &--description, &--equipment {
+            width: 100%;
         }
     }
 }
