create component Slideshow

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -8,6 +8,7 @@
 @import '../../components/DropDown/DropDown.scss';
 @import '../../components/Error/Error.scss';
 @import '../../components/Card/Card.scss';
+@import '../../components/Slideshow/Slideshow.scss';
 
 /* Pages*/
 @import '../../pages/Home/Home.scss';
