--- a/src/pages/AboutRental/AboutRental.scss
+++ b/src/pages/AboutRental/AboutRental.scss
@@ -1,47 +1,3 @@
-
-.carrusel__wrapper {
-    width: 90%;
-    margin: 0 auto;
-    position: relative;
-    border-radius: 20px;
-
-    &--gallery {
-        width: 100%;
-        object-fit: cover;
-        height: 415px;
-        border-radius: 20px;
-    }
-    &--arrowl {
-        cursor: pointer;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        left: 10px;
-        .arrowLeft {
-            font-size: 50px;
-            color: $white;
-        }
-    }
-    &--arrowr {
-        cursor: pointer;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        right: 10px;
-        .arrowRight {
-            font-size: 50px;
-            color: $white;
-        }
-    }
-    &--number {
-        position: absolute;
-        top: 90%;
-        left: 50%;
-        transform: translateX(-50%);
-        color: $white;
-    }
-}
-
 .property__wrapper {
     display: flex;
     width: 90%;
@@ -181,14 +137,26 @@
     }
 }
 
-@media only screen and (max-width: 500px) {
-    .wrapper {
-        .carrusel__wrapper {
-            img {
-                height: 265px;
-            }
-        }
+/*Animations */
+.property__dropdown--content {
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transform: translateY(-50%);
+    transition: max-height 0.4s ease-in, transform 0.4s ease-in, opacity 0.4s ease-in, padding-top 0.4s ease-in, padding-bottom 0.4s ease-in;
+    padding: 0 3%;
+
+    &.open {
+        opacity: 1;
+        transform: translateY(0);
+        max-height: 500px;
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
+}
+
+@media only screen and (max-width: 500px) {
+
     .property__wrapper {
         display: flex;
         flex-direction: column;
