--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -13,7 +13,7 @@ header {
             height: 100%;
             height: 223px;
             object-fit: cover;
-            filter: brightness(35%) contrast(100%);
+            // filter: brightness(35%) contrast(100%);
             border-radius: 15px;
         }
         h1 {
